Little overflow error fix

--- a/client/stylesheets/components/header.import.less
+++ b/client/stylesheets/components/header.import.less
@@ -14,6 +14,7 @@
 @lang-sel-sz-f: 1.2;
 
 header {
+    overflow-x: hidden;
     background-color: white;
 
     .socialMedia i:first-child {
